<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/file"
        android:title="@string/sort_by"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/calories"
                android:title="@string/calories" />
            <item
                android:id="@+id/carbs"
                android:title="@string/carbs" />

            <item
                android:id="@+id/fats"
                android:title="@string/fats" />


            <item
                android:id="@+id/time"
                android:title="@string/time" />

            <item
                android:id="@+id/proteins"
                android:title="@string/proteins" />
            <item
                android:id="@+id/difficulty"
                android:title="@string/difficulty" />

        </menu>
    </item>
</menu>